fix overflow

--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	overflow: hidden;
 	height: 100vh;
 }
 
